--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://Liviu1991/.github.io/ZTMRoboFriends",
+  "homepage": "http://Liviu1991/.github.io/robofriends",
   "name": "robo_friends",
   "version": "0.1.0",
   "private": true,
